--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <h3 class="font-semibold mb-3 text-emerald-950">Tren Skor</h3>
             <canvas id="trendCanvas" width="400" height="220" class="w-full"></canvas>
             <p class="text-xs text-emerald-700 mt-2">
-              Batang hijau menunjukkan skor dari waktu ke waktu (maksimal 10 entri terakhir).
+              Diagram batang menunjukkan skor dari waktu ke waktu (maksimal 10 entri terakhir).
             </p>
           </div>
         </div>
@@ -346,7 +346,7 @@
           Tampilan dan animasi dirancang ramah pengguna untuk mendorong refleksi diri dan kebiasaan mencari dukungan.
         </p>
         <p class="text-xs text-emerald-700">
-          Catatan: Tidak ada data dikirim ke server. Riwayat tersimpan lokal di peramban dan bisa dihapus kapan saja.
+          Catatan: Tidak ada data yang dikirim ke server. Riwayat tersimpan lokal di device user dan bisa dihapus kapan saja.
         </p>
       </div>
     </section>
@@ -361,3 +361,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
