--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           Tampilan dan animasi dirancang ramah pengguna untuk mendorong refleksi diri dan kebiasaan mencari dukungan.
         </p>
         <p class="text-xs text-emerald-700">
-          Catatan: Tidak ada data yang dikirim ke server. Riwayat tersimpan lokal di device user dan bisa dihapus kapan saja.
+          Catatan: Tidak ada data yang dikirim ke server. Riwayat tersimpan hanya di device user dan bisa dihapus kapan saja.
         </p>
       </div>
     </section>
@@ -361,4 +361,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
