--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
     <section id="aboutSection" class="page-section hidden max-w-3xl mx-auto">
       <div class="card bg-white/95 border border-emerald-100 p-6 md:p-8 space-y-4">
         <h2 class="text-xl font-semibold text-emerald-950 flex items-center gap-2">
-          <span>Tentang Proyek & SDG 3</span>
-          <span class="text-rose-500 text-lg">♥</span>
+          <span>Tentang SDG 3</span>
+  
         </h2>
         <p class="text-sm sm:text-base text-emerald-800 leading-relaxed">
-          Aplikasi ini mendukung tujuan Sustainable Development Goal (SDG) 3: Good Health and Well-Being,
+          Website ini mendukung tujuan Sustainable Development Goal (SDG) 3: Good Health and Well-Being,
           khususnya pada aspek kesehatan mental.
         </p>
         <p class="text-sm sm:text-base text-emerald-800 leading-relaxed">
@@ -361,5 +361,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
